# ai-mcp-editor

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  constants.py  schema.py
core/compiler/: __init__.py  v1.py  v2.py
core/tests/: regen_goldens.py  test_compiler.py
core/tests/golden/: custom_restrictions.json  custom_restrictions.txt  full.json  full.txt  grid_promo.json  grid_promo.txt  minimal.json  minimal.txt  product_all_over.json  product_all_over.txt  product_background.json  product_background.txt  subject_hero.json  subject_hero.txt
docs/plans/: mcp-editor-plan.md
server/: app.py  storage.py  tools.py  widget_resource.py
server/tests/: test_storage.py  test_tools.py
widget/dev/: mock-openai.js  serve.py
widget/src/: compiler.js  editor.js  index.html  layouts.js  styles.css
widget/test/: golden.test.js
